[gd_scene load_steps=2 format=3 uid="uid://di11arkaki8vf"]

[ext_resource type="Script" path="res://classes/CarPart.gd" id="1_kpwxk"]

[node name="CarPart" type="Sprite2D" groups=["visible_after_opening"]]
visible = false
script = ExtResource("1_kpwxk")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]

[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_exited"]
